# RepeaterPiEvo

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  shell.nix
.github/workflows/: rust.yml
.ipynb_checkpoints/: config-checkpoint.toml
cal/: Sensorboard_SN0.xlsx  fit.ipynb  fit.py  pyproject.toml
cal/.ipynb_checkpoints/: fit-checkpoint.ipynb
sensorboard/cal/: Sensorboard_SN0.xlsx  data.csv  fit.ipynb  fit.py
sensorboard/sensorboard-arduino/: sensorboard.ino
src/: config.rs  cpu_stats.rs  main.rs  sensor_board.rs  serial_reader.rs  vcgencmd_influx.rs
website/: docker-compose.yml
website/config/caddy/: Caddyfile
website/config/caddy/conf.d/: grafana.kg5key.com  grafana2.kg5key.com  influxdb.kg5key.com
website/config/grafana/: grafana.ini
