[package]
name = "repeaterpi_evo"
authors = ["Erich Ellsworth <erich@kg5key.com>"]
license = "GPL-2.0-or-later"
version = "3.0.3"
edition = "2024"
publish = false

[package.metadata.licenses]
"tokio-serial" = { license = "MIT", source = "https://github.com/berkowski/tokio-serial", file = "examples/serial_println.rs" }

[profile.release]
overflow-checks = true

[dependencies]
influxdb = { version = "0.7.1", features = ["derive"] }
chrono = {version = "0.4.31"}
tokio = {version = "1.31.0", features = ["full"] }
env_logger = "0.11.5"
log = "0.4.20"
config = { version = "0.15.4", features = ["ini"] }
toml = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
tokio-serial =  { version = "5.4.4", features = ["bytes", "tokio-util"] }
bytes = "1.7.2"
tokio-util = "0.7.12"
futures = "0.3.30"