[package]
name = "repeaterpi_evo"
authors = ["Erich Ellsworth <erich@kg5key.com>"]
license = "GPL-2.0-or-later"
version = "3.0.4"
edition = "2024"
publish = false
license-file = "LICENSE.md"

[package.metadata.licenses]
"tokio-serial" = { license = "MIT", source = "https://github.com/berkowski/tokio-serial", file = "examples/serial_println.rs" }

[profile.release]
overflow-checks = true
codegen-units = 1
lto = true

[dependencies]
influxdb = { version = "0.7.2", features = ["derive"] }
chrono = {version = "0.4.40"}
tokio = {version = "1.44.2", features = ["full"] }
env_logger = "0.11.8"
log = "0.4.27"
config = { version = "0.15.11", features = ["ini"] }
toml = "0.8.20"
serde = { version = "1.0", features = ["derive"] }
tokio-serial =  { version = "5.4.5", features = ["bytes", "tokio-util"] }
bytes = "1.10.1"
tokio-util = "0.7.14"
futures = "0.3.31"
